--- a/rest/src/main/res/values/strings.xml
+++ b/rest/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">rest</string>
+    <string name="base_url">https://herramientime.firebaseio.com/</string>
 </resources>
