--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,10 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="title_dialog_atencion">¡Atención!</string>
+    <string name="promt_message_exit">¿Deseas salir de la app?</string>
 
     <string name="action_settings">Settings</string>
     <string name="error_activity_not_prepared">Actividad no preparada</string>
+    <string name="prompt_not_found_herramienta">No se ha encontrado la herramienta seleccionada</string>
 </resources>
