--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="title_reserva">Reserva</string>
     <string name="action_reservar">Reservar</string>
     <string name="title_alquiler_herramienta">Alquiler herramienta</string>
+    <string name="title_alquiler_experiencia">Contratar experiencia</string>
     <string name="prompt_aceptar">Aceptar</string>
     <string name="action_subir_herramienta">Alquilar Herramienta</string>
+    <string name="action_subir_experiencia">Contratar experiencia</string>
 </resources>
