--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="error_user_not_found">No existe el usuario introducido</string>
     <string name="error_fill_user">Tiene que rellenar el usuario</string>
     <string name="errpr_fill_password">Tiene que rellenar el password</string>
+    <string name="message_loading">Cargando...</string>
 </resources>
