--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,9 @@
     <string name="error_minimum_6_characts">Tiene que rellenar con un apellido con mínimo 6 caracteres</string>
     <string name="error_user_exists">El usuario introducido ya existe</string>
     <string name="rationale_locat">Es necesario el permiso para mostrar su ubicación</string>
+    <string name="prompt_descripcion">Descripcion</string>
+    <string name="prompt_titulo">Titulo</string>
+    <string name="prompt_precio">Precio</string>
+    <string name="action_make_photo">Hacer foto</string>
+    <string name="prompt_title_foto">Foto:</string>
 </resources>
