--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="prompt_error_first_log_reserve">Primero tiene que iniciar sesión para reservar</string>
     <string name="error_need_log_upload_herramienta">Primero tiene que iniciar sesión antes de subir una herramienta</string>
     <string name="error_need_log_upload_experience">Primero tiene que iniciar sesion antes de subir una experiencia</string>
+    <string name="action_filter">Filtrar</string>
 </resources>
