User detail and filters

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="prompt_nombre_apellidos">Nombre y apellidos</string>
     <string name="error_field_acerca_de_ti">Tiene que rellenar algún dato acerca de usted</string>
     <string name="action_close_session">Cerrar sesión</string>
+    <string name="prompt_title_user">USUARIO</string>
 </resources>
